@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=dzco
-VERSION=1.2.3
+VERSION=1.2.4
 
 DEPENDENCY="zeda=1.2.18;zm=1.2.7"
